<resources>
    <string name="app_name">FCC Bengaluru</string>
    <string name="action_settings">Settings</string>

    <!--splash screen strings-->
    <string name="content_description_splash">Splash Screen</string>
    <string name="splash_page_email">Enter your email</string>
    <string name="splash_page_password">Enter your password</string>
    <string name="splash_login_now">Login now</string>
    <string name="splash_signup_text">Don\'t have an account? Signup</string>
    <string name="splash_error_email">Please enter a valid email</string>
    <string name="splash_error_password">Please enter a password of length 8 or more</string>

    <string name="signup_email">Signup with email</string>
    <string name="signup_google">Signup with Google</string>
    <string name="signup_facebook">Signup with Facebook</string>
    <string name="signup_already_signin">Already have an account? Signin</string>

    <string name="email_privacy_policy">By Signing, you agree to our Privacy policy</string>
    <string name="email_signup">Signup</string>

    <string name="progress_dialog_msg">Please wait loading request</string>
    <string name="error_common">Something went wrong, please try again</string>
    <string name="login_expired">Login expired please login again.</string>
    <string name="last_login_info">Last login is not performed successfully</string>

    <!--facebook id-->
    <string name="facebook_app_id">replace with yours</string>
    <string name="fb_login_protocol_scheme">fb1993507337537188</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="events_details_title">Enter Events details</string>
    <string name="enter_title_name">Enter title name</string>
    <string name="event_date_dd_mm_yyyy">Enter event date in dd/mm/yyyy</string>
    <string name="event_pin_code">Enter pin code</string>
    <string name="event_address">Enter address</string>
    <string name="eevent_details">Enter short event details</string>
    <string name="event_image_url">Enter image url</string>
    <string name="button_submit">Submit</string>
    <string name="error_input_common">Please enter a valid input</string>
    <string name="menu_admin_panel">Admin Panel</string>
    <string name="dialog_title_verification">Email Verification</string>
    <string name="dialog_code_failed">Your code does not matched</string>
    <string name="email_verification_sent">Please check you inbox for account verification</string>
    <string name="user_not_found_msg">Sorry this email doesn\'t exist, please signup</string>
    <string name="wrong_password_msg">Email or password provided does not match</string>
    <string name="user_already_exist_msg">You already have an account Try signing in</string>
    <string name="event_start_time">Enter start time in 24 hour format ex 10 PM</string>
    <string name="event_enter_website">Enter website</string>
    <string name="error_connect_to_server">Opps could not connect to server</string>
    <string name="button_try_again">Try Again</string>
    <string name="button_add_to_calendar">Add to calender</string>
    <string name="button_open_web">Website</string>

    <string name="sample_string">"As a mob/web developer and tech enthusiast what you can build which will solve real-time existing problems in an efficient way ? or let's discuss the problems that you think can be solved by developing mob/web apps"</string>
    <string name="dialog_google_play_services_title">Google Play Service</string>
    <string name="dialog_google_play_services_missing">Sorry, we have detected that your device does not support Google play services.</string>

    <string name="default_notification_channel_id">com.android.buffer.fccbengaluru</string>
</resources>
